[gd_scene load_steps=4 format=3 uid="uid://dq7wy740cjdm5"]

[ext_resource type="Script" path="res://Holes/hole_components/barrier.gd" id="1_41eto"]

[sub_resource type="FogMaterial" id="FogMaterial_y25oi"]
density = 5.0
albedo = Color(0.9025, 0.95, 0.941292, 1)
emission = Color(0.414135, 0.648301, 0.585165, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fckr1"]

[node name="Barrier" type="StaticBody3D"]
script = ExtResource("1_41eto")

[node name="Fog" type="FogVolume" parent="."]
visible = false
material = SubResource("FogMaterial_y25oi")

[node name="FrontBarrier" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_fckr1")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
